[gd_scene load_steps=14 format=3 uid="uid://bbf64xtbp0xfu"]

[ext_resource type="Script" path="res://level_script.gd" id="1_axibv"]
[ext_resource type="PackedScene" uid="uid://byrla7tpwd3rk" path="res://player.tscn" id="2_ibc6f"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1i27i"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_irncn"]
sky_material = SubResource("ProceduralSkyMaterial_1i27i")

[sub_resource type="Environment" id="Environment_wnk0p"]
background_mode = 2
sky = SubResource("Sky_irncn")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_kne0e"]
size = Vector3(2, 1, 2)

[sub_resource type="Animation" id="Animation_rh8q6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -2.5)]
}

[sub_resource type="Animation" id="Animation_lpnsb"]
resource_name = "closing_floor"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -2.5), Vector3(0, 0, -3.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_doyyl"]
_data = {
"RESET": SubResource("Animation_rh8q6"),
"closing_floor": SubResource("Animation_lpnsb")
}

[sub_resource type="Animation" id="Animation_qbrh2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 2.5)]
}

[sub_resource type="Animation" id="Animation_4kefv"]
resource_name = "closing_floor"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 2.5), Vector3(0, 0, 3.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6pp8n"]
_data = {
"RESET": SubResource("Animation_qbrh2"),
"closing_floor": SubResource("Animation_4kefv")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_0dfy5"]
size = Vector3(8, 0.1, 8)

[node name="Level_4" type="Node3D"]
script = ExtResource("1_axibv")
num_holes = 2
file_path = "res://level_5.tscn"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wnk0p")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6, 0.848)
fov = 110.0

[node name="LevelObjects" type="Node3D" parent="."]

[node name="Floor1" type="CSGBox3D" parent="LevelObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -0.125, 0)
use_collision = true
size = Vector3(1, 0.25, 8)

[node name="Floor2" type="CSGBox3D" parent="LevelObjects/Floor1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 3.5)
size = Vector3(3, 0.25, 1)

[node name="Hole1" type="CSGCylinder3D" parent="LevelObjects/Floor1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.5)
operation = 2
radius = 0.4
height = 0.3
sides = 32

[node name="Hole1Area" type="Area3D" parent="LevelObjects/Floor1/Hole1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelObjects/Floor1/Hole1/Hole1Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.872013, 0)
shape = SubResource("BoxShape3D_kne0e")

[node name="ClosingFloor1" type="CSGBox3D" parent="LevelObjects/Floor1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)
size = Vector3(1, 0.1, 1)

[node name="ClosingFloor1Anim" type="AnimationPlayer" parent="LevelObjects/Floor1/ClosingFloor1"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_doyyl")
}

[node name="Floor3" type="CSGBox3D" parent="LevelObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.125, 0)
use_collision = true
size = Vector3(1, 0.25, 8)

[node name="Floor4" type="CSGBox3D" parent="LevelObjects/Floor3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -3.5)
size = Vector3(3, 0.25, 1)

[node name="Hole2" type="CSGCylinder3D" parent="LevelObjects/Floor3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.5)
operation = 2
radius = 0.4
height = 0.3
sides = 32

[node name="Hole2Area" type="Area3D" parent="LevelObjects/Floor3/Hole2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelObjects/Floor3/Hole2/Hole2Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.872013, 0)
shape = SubResource("BoxShape3D_kne0e")

[node name="ClosingFloor2" type="CSGBox3D" parent="LevelObjects/Floor3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5)
size = Vector3(1, 0.1, 1)

[node name="ClosingFloor2Anim" type="AnimationPlayer" parent="LevelObjects/Floor3/ClosingFloor2"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_6pp8n")
}

[node name="Wall1" type="CSGBox3D" parent="LevelObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.55, 0.35, 0)
use_collision = true
size = Vector3(0.1, 1.2, 8)

[node name="Wall2" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.1, 0, 0)
size = Vector3(0.1, 1.2, 8)

[node name="Wall3" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1, 0, -0.5)
size = Vector3(0.1, 1.2, 7)

[node name="Wall4" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0.5)
size = Vector3(0.1, 1.2, 7)

[node name="Wall5" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.6, 0, 2.95)
size = Vector3(0.1, 1.2, 2.9)

[node name="Wall6" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.5, 0, -2.95)
size = Vector3(0.1, 1.2, 2.9)

[node name="Wall7" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 0, 4.05)
size = Vector3(0.1, 1.2, 4.1)

[node name="Wall8" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.1, 0, -4.05)
size = Vector3(0.1, 1.2, 4.1)

[node name="Wall9" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.55, 0, -4)
size = Vector3(0.1, 1.2, 1.2)

[node name="Wall10" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.55, 0, 4)
size = Vector3(0.1, 1.2, 1.2)

[node name="Wall11" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.1, 0, 3.5)
size = Vector3(0.1, 1.2, 1.2)

[node name="Wall12" type="CSGBox3D" parent="LevelObjects/Wall1"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.1, 0, -3.5)
size = Vector3(0.1, 1.2, 1.2)

[node name="InvisibleWall" type="StaticBody3D" parent="LevelObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelObjects/InvisibleWall"]
shape = SubResource("BoxShape3D_0dfy5")

[node name="Player1" parent="." instance=ExtResource("2_ibc6f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 3.5)

[node name="Player2" parent="." instance=ExtResource("2_ibc6f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -3.5)

[node name="LevelEndTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="LevelObjects/Floor1/Hole1/Hole1Area" to="." method="_on_hole_1_area_body_entered"]
[connection signal="body_entered" from="LevelObjects/Floor3/Hole2/Hole2Area" to="." method="_on_hole_2_area_body_entered"]
[connection signal="timeout" from="LevelEndTime" to="." method="_on_level_end_time_timeout"]
